Bug 505811 - Editing a Category name to contain a colon ":" causes frequent program crashes
Summary: Editing a Category name to contain a colon ":" causes frequent program crashes
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Mint (Ubuntu based) Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-19 23:34 UTC by Mark Medoff
Modified: 2025-06-20 08:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Medoff 2025-06-19 23:34:10 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
Creating a Category with a colon in the name results in a child category created in the hierarchy. Editing a Category name to contain a colon is accepted by program but results in frequent program crashes.

STEPS TO REPRODUCE
1. Edit Category as described above
2. 
3. 

OBSERVED RESULT
Frequent program crashes

EXPECTED RESULT
Program should reject editing a Category name to contain a colon, since it implies creating a child category.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2025-06-20 07:40:52 UTC
Git commit 07ff1ecd4e51ae774d50fa9e6dd11d564405d613 by Thomas Baumgart.
Committed on 20/06/2025 at 07:40.
Pushed by tbaumgart into branch '5.2'.

Prevent creation of accounts that contain a colon in the name
FIXED-IN: 5.2

M  +3    -3    kmymoney/dialogs/knewaccountdlg.cpp
M  +13   -0    kmymoney/wizards/newaccountwizard/kaccounttypepage.cpp

https://invent.kde.org/office/kmymoney/-/commit/07ff1ecd4e51ae774d50fa9e6dd11d564405d613
Comment 2 Thomas Baumgart 2025-06-20 08:50:41 UTC
Git commit 6b611477de1025e327715256ddf3f9d2ea1e3216 by Thomas Baumgart.
Committed on 20/06/2025 at 07:41.
Pushed by tbaumgart into branch 'master'.

Prevent creation of accounts that contain a colon in the name
FIXED-IN: 5.2
(cherry picked from commit 07ff1ecd4e51ae774d50fa9e6dd11d564405d613)

M  +3    -3    kmymoney/dialogs/knewaccountdlg.cpp
M  +13   -0    kmymoney/wizards/newaccountwizard/kaccounttypepage.cpp

https://invent.kde.org/office/kmymoney/-/commit/6b611477de1025e327715256ddf3f9d2ea1e3216