Prevent creation of accounts that contain a colon in the name

BUG: 505811
FIXED-IN: 5.2
(cherry picked from commit 07ff1ecd4e51ae774d50fa9e6dd11d564405d613)